# pdf4vllm-mcp

./: .gitignore  .gitpod.yml  .mcp.json  LICENSE  MANIFEST.in  README.ko.md  README.md  config.example.json  pyproject.toml  requirements.txt  run_test.sh  server.json  setup.py  test_image_extraction.py  test_server.py
scripts/: install_mcp.py  install_mcp.sh  publish.sh
src/: __init__.py  config.py  content_orderer.py  file_matcher.py  image_processor.py  pdf_tools.py  schemas.py  server.py  table_converter.py  text_extractor.py  text_validator.py  validators.py
tests/: test_name_pattern.py  test_page_range.py
